tests/cases/compiler-development/artifact/errors/diagnostic-move-borrowed-owner.diagnostic
diagnostic error code=O0001 family=ownership message="cannot move borrowed binding 'token'" sources=1 labels=1 notes=0 helps=0
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-move-borrowed-owner.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-move-borrowed-owner.ari" bytes=171
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-move-borrowed-owner.ari" line=8 column=32 end_line=8 end_column=37 byte_start=161 byte_end=166 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-move-borrowed-owner.ari:8:32\n   |\n 8 |   return needs_both(ref token, token);\n   |                                ^^^^^"
